crates/walrus-codegen/snapshots/assign_field.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

%S = type { i32 }

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define i32 @builtins.putchar.wrapper(i8* %env, i32 %c) {
  %1 = call i32 @putchar(i32 %c)
  ret i32 %1
}

declare i32 @putchar(i32)

define i32 @main(i8* %main.env) {
main.entry:
  %S.alloca = alloca %S, align 8
  %S.x.gep = getelementptr inbounds %S, %S* %S.alloca, i32 0, i32 0
  store i32 0, i32* %S.x.gep, align 4
  %S = load %S, %S* %S.alloca, align 4
  %s.alloca = alloca %S, align 8
  store %S %S, %S* %s.alloca, align 4
  %S.x.gep1 = getelementptr inbounds %S, %S* %s.alloca, i32 0, i32 0
  store i32 1, i32* %S.x.gep1, align 4
  %s = load %S, %S* %s.alloca, align 4
  %S.x = extractvalue %S %s, 0
  ret i32 %S.x
}

