crates/walrus-codegen/snapshots/enum2_variant0.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

%Foo = type { i8, {} }

define %Foo @main() {
main.entry:
  %Foo.alloca = alloca %Foo, align 8
  %Foo.discriminant.gep = getelementptr inbounds %Foo, %Foo* %Foo.alloca, i32 0, i32 0
  store i8 0, i8* %Foo.discriminant.gep, align 1
  %Foo.payload.gep = getelementptr inbounds %Foo, %Foo* %Foo.alloca, i32 0, i32 1
  %Foo.load = load %Foo, %Foo* %Foo.alloca, align 1
  ret %Foo %Foo.load
}

